responsive for phone

--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.0.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "nuxt": "^3.12.3",
     "nuxt-swiper": "^1.2.2",
     "vue": "latest",
     "vue3-marquee": "^4.2.0"
+  },
+  "devDependencies": {
+    "@iconify-json/heroicons": "^1.1.21"
   }
 }
