--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@nuxt/icon": "^1.0.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.12.3",
     "nuxt-swiper": "^1.2.2",
+    "pinia": "^2.1.7",
     "vue": "latest",
     "vue3-marquee": "^4.2.0"
   },
   "devDependencies": {
-    "@iconify-json/heroicons": "^1.1.21"
+    "@iconify-json/heroicons": "^1.1.21",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.1"
   }
 }
