--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.1.21",
+    "@iconify-json/tabler": "^1.1.116",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1"
   }
 }
