--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@iconify-json/material-symbols": "^1.1.83",
     "@iconify-json/ph": "^1.1.13",
     "@iconify-json/tabler": "^1.1.116",
+    "@iconify-json/vaadin": "^1.1.9",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1"
   }
 }
