--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/icon": "^1.0.0",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@pinia/nuxt": "^0.5.1",
+    "axios": "^1.7.2",
     "nuxt": "^3.12.3",
     "nuxt-swiper": "^1.2.2",
     "pinia": "^2.1.7",
